Reorganize the default neo4j.conf files

--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -1,80 +1,72 @@
-################################################################
+#*****************************************************************
 # #{product.fullname} configuration
-################################################################
+#*****************************************************************
+
+# The name of the database to mount
+#dbms.active_database=graph.db
 
 # Paths of directories in the installation.
 #dbms.directories.data=data
 #dbms.directories.plugins=plugins
+#dbms.directories.certificates=certificates
 
 # This setting constrains all `LOAD CSV` import files to be under the `import` directory. Remove or uncomment it to
 # allow files to be loaded from anywhere in filesystem; this introduces possible security problems. See the `LOAD CSV`
 # section of the manual for details.
 dbms.directories.import=import
 
-# The name of the database to mount
-#dbms.active_database=graph.db
-
-#***************************************************************
-# Server configuration
-#***************************************************************
-
 # Whether requests to Neo4j are authenticated.
-# To disable authentication, uncomment this line:
+# To disable authentication, uncomment this line
 #dbms.security.auth_enabled=false
 
-#
+# Enable this to be able to upgrade a store from an older version.
+#dbms.allow_format_migration=true
+
+# The amount of memory to use for mapping the store files, in bytes (or
+# kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
+# If Neo4j is running on a dedicated server, then it is generally recommended
+# to leave about 2-4 gigabytes for the operating system, give the JVM enough
+# heap to hold all your transaction state and query context, and then leave the
+# rest for the page cache.
+# The default page cache memory assumes the machine is dedicated to running
+# Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
+#dbms.memory.pagecache.size=10g
+
+#*****************************************************************
+# Network connector configuration
+#*****************************************************************
+
 # Bolt connector
-#
 dbms.connector.bolt.type=BOLT
 dbms.connector.bolt.enabled=true
 dbms.connector.bolt.tls_level=OPTIONAL
-# To have Bolt accept non-local connections, uncomment this line:
+# To have Bolt accept non-local connections, uncomment this line
 # dbms.connector.bolt.address=0.0.0.0:7687
 
-#
 # HTTP Connector
-#
 dbms.connector.http.type=HTTP
 dbms.connector.http.enabled=true
 #dbms.connector.http.encryption=NONE
-# To have HTTP accept non-local connections, uncomment this line:
+# To have HTTP accept non-local connections, uncomment this line
 #dbms.connector.http.address=0.0.0.0:#{default.http.port}
 
-#
 # HTTPS Connector
-#
 dbms.connector.https.type=HTTP
 dbms.connector.https.enabled=true
 dbms.connector.https.encryption=TLS
 dbms.connector.https.address=localhost:#{default.https.port}
 
-# Certificates directory
-dbms.directories.certificates=certificates
-
-# Comma separated list of JAX-RS packages containing JAX-RS resources, one
-# package name for each mountpoint. The listed package names will be loaded
-# under the mountpoints specified. Uncomment this line to mount the
-# org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
-# neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
-# http://localhost:#{default.http.port}/examples/unmanaged/helloworld/{nodeId}
-#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
-
 # Number of Neo4j worker threads.
 #dbms.threads.worker_count=
 
 #*****************************************************************
-# HTTP logging configuration
+# Logging configuration
 #*****************************************************************
 
-# HTTP logging is disabled. HTTP logging can be enabled by setting this
-# property to 'true'.
-dbms.logs.http.enabled=false
+# To enable HTTP logging, uncomment this line
+#dbms.logs.http.enabled=true
 
-#***************************************************************
-# GC Logging
-#***************************************************************
-
-# Enable GC Logging by uncommenting this line.
+# To enable GC Logging, uncomment this line
 #dbms.logs.gc.enabled=true
 
 # GC Logging Options
@@ -94,18 +86,9 @@ dbms.logs.http.enabled=false
 # Maximum number of history files for the internal log.
 #dbms.logs.debug.rotation.keep_number=7
 
-# Enable this to be able to upgrade a store from an older version.
-#dbms.allow_format_migration=true
-
-# The amount of memory to use for mapping the store files, in bytes (or
-# kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
-# If Neo4j is running on a dedicated server, then it is generally recommended
-# to leave about 2-4 gigabytes for the operating system, give the JVM enough
-# heap to hold all your transaction state and query context, and then leave the
-# rest for the page cache.
-# The default page cache memory assumes the machine is dedicated to running
-# Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-#dbms.memory.pagecache.size=10g
+#*****************************************************************
+# Miscellaneous configuration
+#*****************************************************************
 
 # Enable this to specify a parser other than the default one.
 #cypher.default_language_version=3.0
@@ -128,3 +111,11 @@ dbms.logs.http.enabled=false
 # Only allow read operations from this Neo4j instance. This mode still requires
 # write access to the directory for lock purposes.
 #dbms.read_only=false
+
+# Comma separated list of JAX-RS packages containing JAX-RS resources, one
+# package name for each mountpoint. The listed package names will be loaded
+# under the mountpoints specified. Uncomment this line to mount the
+# org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
+# neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
+# http://localhost:#{default.http.port}/examples/unmanaged/helloworld/{nodeId}
+#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
