--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -1,101 +1,78 @@
-################################################################
+#*****************************************************************
 # #{product.fullname} configuration
-################################################################
+#*****************************************************************
+
+# The name of the database to mount
+#dbms.active_database=graph.db
 
 # Paths of directories in the installation.
 #dbms.directories.data=data
 #dbms.directories.plugins=plugins
+#dbms.directories.certificates=certificates
 
 # This setting constrains all `LOAD CSV` import files to be under the `import` directory. Remove or uncomment it to
 # allow files to be loaded from anywhere in filesystem; this introduces possible security problems. See the `LOAD CSV`
 # section of the manual for details.
 dbms.directories.import=import
 
-# The name of the database to mount
-#dbms.active_database=graph.db
-
-#***************************************************************
-# Server configuration
-#***************************************************************
-
-# Database mode
-# Allowed values:
-# HA - High Availability
-# SINGLE - Single mode, default.
-# To run in High Availability mode uncomment this line:
-#dbms.mode=HA
-
 # Whether requests to Neo4j are authenticated.
-# To disable authentication, uncomment this line:
+# To disable authentication, uncomment this line
 #dbms.security.auth_enabled=false
 
-#
+# Enable this to be able to upgrade a store from an older version.
+#dbms.allow_format_migration=true
+
+# The amount of memory to use for mapping the store files, in bytes (or
+# kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
+# If Neo4j is running on a dedicated server, then it is generally recommended
+# to leave about 2-4 gigabytes for the operating system, give the JVM enough
+# heap to hold all your transaction state and query context, and then leave the
+# rest for the page cache.
+# The default page cache memory assumes the machine is dedicated to running
+# Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
+#dbms.memory.pagecache.size=10g
+
+# Enable online backups to be taken from this database.
+#dbms.backup.enabled=true
+
+# To allow remote backups, uncomment this line:
+#dbms.backup.address=0.0.0.0:6362
+
+#*****************************************************************
+# Network connector configuration
+#*****************************************************************
+
 # Bolt connector
-#
 dbms.connector.bolt.type=BOLT
 dbms.connector.bolt.enabled=true
 dbms.connector.bolt.tls_level=OPTIONAL
-# To have Bolt accept non-local connections, uncomment this line:
+# To have Bolt accept non-local connections, uncomment this line
 # dbms.connector.bolt.address=0.0.0.0:7687
 
-#
 # HTTP Connector
-#
 dbms.connector.http.type=HTTP
 dbms.connector.http.enabled=true
 #dbms.connector.http.encryption=NONE
-# To have HTTP accept non-local connections, uncomment this line:
+# To have HTTP accept non-local connections, uncomment this line
 #dbms.connector.http.address=0.0.0.0:#{default.http.port}
 
-#
 # HTTPS Connector
-#
 dbms.connector.https.type=HTTP
 dbms.connector.https.enabled=true
 dbms.connector.https.encryption=TLS
 dbms.connector.https.address=localhost:#{default.https.port}
 
-# Certificates directory
-dbms.directories.certificates=certificates
-
-# Comma separated list of JAX-RS packages containing JAX-RS resources, one
-# package name for each mountpoint. The listed package names will be loaded
-# under the mountpoints specified. Uncomment this line to mount the
-# org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
-# neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
-# http://localhost:#{default.http.port}/examples/unmanaged/helloworld/{nodeId}
-#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
-
 # Number of Neo4j worker threads.
 #dbms.threads.worker_count=
 
-# Log executed queries that takes longer than the configured threshold. Enable by uncommenting this line.
-#dbms.logs.query.enabled=true
-
-# If the execution of query takes more time than this threshold, the query is logged. If set to zero then all queries
-# are logged.
-#dbms.logs.query.threshold=0
-
-# The file size in bytes at which the query log will auto-rotate. If set to zero then no rotation will occur. Accepts a
-# binary suffix "k", "m" or "g".
-#dbms.logs.query.rotation.size=20m
-
-# Maximum number of history files for the query log.
-#dbms.logs.query.rotation.keep_number=7
-
 #*****************************************************************
-# HTTP logging configuration
+# Logging configuration
 #*****************************************************************
 
-# HTTP logging is disabled. HTTP logging can be enabled by setting this
-# property to 'true'.
-dbms.logs.http.enabled=false
+# To enable HTTP logging, uncomment this line
+#dbms.logs.http.enabled=true
 
-#***************************************************************
-# GC Logging
-#***************************************************************
-
-# Enable GC Logging by uncommenting this line.
+# To enable GC Logging, uncomment this line
 #dbms.logs.gc.enabled=true
 
 # GC Logging Options
@@ -115,50 +92,34 @@ dbms.logs.http.enabled=false
 # Maximum number of history files for the internal log.
 #dbms.logs.debug.rotation.keep_number=7
 
-# Enable this to be able to upgrade a store from an older version.
-#dbms.allow_format_migration=true
+# Log executed queries that takes longer than the configured threshold. Enable by uncommenting this line.
+#dbms.logs.query.enabled=true
 
-# The amount of memory to use for mapping the store files, in bytes (or
-# kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
-# If Neo4j is running on a dedicated server, then it is generally recommended
-# to leave about 2-4 gigabytes for the operating system, give the JVM enough
-# heap to hold all your transaction state and query context, and then leave the
-# rest for the page cache.
-# The default page cache memory assumes the machine is dedicated to running
-# Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-#dbms.memory.pagecache.size=10g
+# If the execution of query takes more time than this threshold, the query is logged. If set to zero then all queries
+# are logged.
+#dbms.logs.query.threshold=0
 
-# Enable this to specify a parser other than the default one.
-#cypher.default_language_version=3.0
+# The file size in bytes at which the query log will auto-rotate. If set to zero then no rotation will occur. Accepts a
+# binary suffix "k", "m" or "g".
+#dbms.logs.query.rotation.size=20m
 
-# Determines if Cypher will allow using file URLs when loading data using
-# `LOAD CSV`. Setting this value to `false` will cause Neo4j to fail `LOAD CSV`
-# clauses that load data from the file system.
-#dbms.security.allow_csv_import_from_file_urls=true
+# Maximum number of history files for the query log.
+#dbms.logs.query.rotation.keep_number=7
 
-# Retention policy for transaction logs needed to perform recovery and backups.
-#dbms.tx_log.rotation.retention_policy=7 days
-
-# Enable a remote shell server which Neo4j Shell clients can log in to.
-#dbms.shell.enabled=true
-# The network interface IP the shell will listen on (use 0.0.0.0 for all interfaces).
-#dbms.shell.host=127.0.0.1
-# The port the shell will listen on, default is 1337.
-#dbms.shell.port=1337
-
-# Only allow read operations from this Neo4j instance. This mode still requires
-# write access to the directory for lock purposes.
-#dbms.read_only=false
-
-# Enable online backups to be taken from this database.
-#dbms.backup.enabled=true
-
-# To allow remote backups, uncomment this line:
-#dbms.backup.address=0.0.0.0:6362
+#*****************************************************************
+# HA configuration
+#*****************************************************************
 
 # Uncomment and specify these lines for running Neo4j in High Availability mode.
 # See the High availability setup tutorial for more details on these settings
 # #{getting-started-ha.url}
+
+# Database mode
+# Allowed values:
+# HA - High Availability
+# SINGLE - Single mode, default.
+# To run in High Availability mode uncomment this line:
+#dbms.mode=HA
 
 # ha.server_id is the number of each instance in the HA cluster. It should be
 # an integer (e.g. 1), and should be unique for each cluster instance.
@@ -213,3 +174,37 @@ ha.pull_interval=10
 # Whether this instance should only participate as slave in cluster. If set to
 # true, it will never be elected as master.
 #ha.slave_only=false
+
+#*****************************************************************
+# Miscellaneous configuration
+#*****************************************************************
+
+# Enable this to specify a parser other than the default one.
+#cypher.default_language_version=3.0
+
+# Determines if Cypher will allow using file URLs when loading data using
+# `LOAD CSV`. Setting this value to `false` will cause Neo4j to fail `LOAD CSV`
+# clauses that load data from the file system.
+#dbms.security.allow_csv_import_from_file_urls=true
+
+# Retention policy for transaction logs needed to perform recovery and backups.
+#dbms.tx_log.rotation.retention_policy=7 days
+
+# Enable a remote shell server which Neo4j Shell clients can log in to.
+#dbms.shell.enabled=true
+# The network interface IP the shell will listen on (use 0.0.0.0 for all interfaces).
+#dbms.shell.host=127.0.0.1
+# The port the shell will listen on, default is 1337.
+#dbms.shell.port=1337
+
+# Only allow read operations from this Neo4j instance. This mode still requires
+# write access to the directory for lock purposes.
+#dbms.read_only=false
+
+# Comma separated list of JAX-RS packages containing JAX-RS resources, one
+# package name for each mountpoint. The listed package names will be loaded
+# under the mountpoints specified. Uncomment this line to mount the
+# org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
+# neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
+# http://localhost:#{default.http.port}/examples/unmanaged/helloworld/{nodeId}
+#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
