Update IOPS limit docs and align defaults

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -191,6 +191,8 @@ ha.pull_interval=10
 #dbms.tx_log.rotation.retention_policy=7 days
 
 # Limit the number of IOs the background checkpoint process will consume per second.
+# This setting is advisory, is ignored in Neo4j Community Edition, and is followed to
+# best effort in Enterprise Edition.
 # An IO is in this case a 8 KiB (mostly sequential) write. Limiting the write IO in
 # this way will leave more bandwidth in the IO subsystem to service random-read IOs,
 # which is important for the response time of queries when the database cannot fit
@@ -199,7 +201,8 @@ ha.pull_interval=10
 # A lower number means lower IO pressure, and consequently longer checkpoint times.
 # The configuration can also be commented out to remove the limitation entirely, and
 # let the checkpointer flush data as fast as the hardware will go.
-dbms.checkpoint.iops.limit=1000
+# Set this to -1 to disable the IOPS limit.
+# dbms.checkpoint.iops.limit=1000
 
 # Enable a remote shell server which Neo4j Shell clients can log in to.
 #dbms.shell.enabled=true
