fix for http logging property

--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -59,7 +59,7 @@ dbms.connector.http.enabled=true
 
 # HTTP logging is disabled. HTTP logging can be enabled by setting this
 # property to 'true'.
-org.neo4j.server.http.log.enabled=false
+dbms.logs.http.enabled=false
 
 # Logging policy file that governs how HTTP log output is presented and
 # archived. Note: changing the rollover and retention policy is sensible, but
