Added findbugs annotations to javadocs

--- a/manual/javadocs/pom.xml
+++ b/manual/javadocs/pom.xml
@@ -138,6 +138,12 @@
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>${findbugs.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <licenses>
