Add cache manager to enterprise auth
- Currently the Shiro supported EhCacheManager
- Fix licenses

--- a/enterprise/security/pom.xml
+++ b/enterprise/security/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>shiro-core</artifactId>
       <version>1.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-ehcache</artifactId>
+      <version>1.2.4</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
