--- a/enterprise/core-edge/pom.xml
+++ b/enterprise/core-edge/pom.xml
@@ -47,14 +47,13 @@
     <dependencies>
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-ha</artifactId>
+            <artifactId>neo4j-com</artifactId>
             <version>${project.version}</version>
-          <exclusions>
-            <exclusion>
-              <groupId>org.neo4j</groupId>
-              <artifactId>neo4j-backup</artifactId>
-            </exclusion>
-          </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-cluster</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
       <dependency>
