Extract Bolt documentation and doc tests

--- a/manual/contents/pom.xml
+++ b/manual/contents/pom.xml
@@ -224,15 +224,15 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-bolt</artifactId>
+      <groupId>org.neo4j.doc</groupId>
+      <artifactId>neo4j-config-docs</artifactId>
       <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.neo4j.doc</groupId>
-      <artifactId>neo4j-config-docs</artifactId>
+      <artifactId>neo4j-bolt-docs</artifactId>
       <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
