--- a/packaging/pom.xml
+++ b/packaging/pom.xml
@@ -108,6 +108,7 @@ terms of the relevant Commercial Agreement.
                 <configuration>
                   <excludeTransitive>true</excludeTransitive>
                   <includes>
+                    <include>org.neo4j:neo4j-slf4j:*</include>
                     <include>org.neo4j:*</include>
                     <include>org.neo4j.app:*</include>
                     <include>org.neo4j.build:*</include>
