Fix circular deps in packaging build

--- a/manual/bolt/pom.xml
+++ b/manual/bolt/pom.xml
@@ -3,14 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>neo4j-manual-parent</artifactId>
-        <groupId>org.neo4j.doc</groupId>
+        <artifactId>parent</artifactId>
+        <groupId>org.neo4j</groupId>
         <version>3.0.2-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.neo4j.doc</groupId>
     <artifactId>neo4j-bolt-docs</artifactId>
+    <version>3.0.2-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <name>Neo4j - Bolt Documentation</name>
