Extract import-tool docs

--- a/manual/contents/pom.xml
+++ b/manual/contents/pom.xml
@@ -210,8 +210,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-import-tool</artifactId>
+      <groupId>org.neo4j.doc</groupId>
+      <artifactId>neo4j-import-tool-docs</artifactId>
       <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
