core-edge: add all configuration to neo4j.conf
This is just a barebones initial commit so that one can
fiddle with the configuration during manual testing.

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -176,6 +176,51 @@ ha.pull_interval=10
 #ha.slave_only=false
 
 #*****************************************************************
+# Core/Edge Configuration
+#*****************************************************************
+
+core_edge.join_catch_up_timeout=10m
+core_edge.leader_election_timeout=500ms
+core_edge.catchup_batch_size=64
+core_edge.log_shipping_max_lag=256
+core_edge.tx_replication_retry_interval=1s
+core_edge.token_creation_timeout=1s
+core_edge.leader_lock_token_timeout=1s
+core_edge.expected_core_cluster_size=3
+core_edge.lock_read_timeout=20s
+
+core_edge.transaction_listen_address=0.0.0.0:6001
+core_edge.transaction_advertised_address=localhost:6001
+
+core_edge.raft_listen_address=0.0.0.0:7400
+core_edge.raft_advertised_address=localhost:7400
+
+core_edge.cluster_listen_address=0.0.0.0:5001
+core_edge.initial_core_cluster_members=
+
+core_edge.last_applied_state_size=1000
+core_edge.id_alloc_state_size=1000
+core_edge.raft_membership_state_size=1000
+core_edge.raft_vote_state_size=1000
+core_edge.raft_term_state_size=1000
+core_edge.global_session_tracker_state_size=1000
+core_edge.replicated_lock_token_state_size=1000
+
+core_edge.outgoing_queue_size=64
+core_edge.state_machine_flush_window_size=100
+
+core_edge.raft_log_pruning=7 days
+core_edge.raft_log_implementation=SEGMENTED
+core_edge.raft_log_rotation_size=1M
+core_edge.raft_log_pruning_frequency=10m
+core_edge.raft_log_meta_data_cache_size=100000
+core_edge.raft_log_entry_cache_size=32
+core_edge.raft_log_header_cache_size=10
+
+core_edge.raft_messages_log_enable=true
+core_edge.pull_interval=1s
+
+#*****************************************************************
 # Miscellaneous configuration
 #*****************************************************************
 
