core-edge: pull out server_id and name from ha cluster config

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -220,6 +220,9 @@ core_edge.raft_log_header_cache_size=10
 core_edge.raft_messages_log_enable=true
 core_edge.pull_interval=1s
 
+core_edge.server_id=
+core_edge.cluster_name=cluster-name
+
 #*****************************************************************
 # Miscellaneous configuration
 #*****************************************************************
