--- a/manual/pom.xml
+++ b/manual/pom.xml
@@ -29,6 +29,7 @@
     <module>bolt</module>
     <module>import-tool</module>
     <module>shell</module>
+    <module>backup</module>
   </modules>
 
   <scm>
