Make role management atomic
- Add com.googlecode.thread-weaver for concurrency tests to
deterministically test concurrent updates with a sequential flow
- Add atomicity tests for addUserToRole and deleteUser
- Share common functionality in AbstractRoleRepository
 (this also increases test coverage)

--- a/enterprise/security/pom.xml
+++ b/enterprise/security/pom.xml
@@ -104,6 +104,27 @@
       <version>1.0</version>
       <scope>test</scope>
     </dependency>
+    <!-- http://mvnrepository.com/artifact/com.googlecode.thread-weaver/threadweaver -->
+    <dependency>
+      <groupId>com.googlecode.thread-weaver</groupId>
+      <artifactId>threadweaver</artifactId>
+      <version>0.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- http://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.21</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- http://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
