Draft of changing PrimitiveLongSet to use Koloboke instead of HopScotch

--- a/community/primitive-collections/pom.xml
+++ b/community/primitive-collections/pom.xml
@@ -65,6 +65,18 @@ the relevant Commercial Agreement.
       <artifactId>neo4j-resource</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.koloboke</groupId>
+      <artifactId>koloboke-compile</artifactId>
+      <version>0.5.1</version>
+      <!-- 'provided' because we only need it at compile-time for its annotation processor -->
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.koloboke</groupId>
+      <artifactId>koloboke-impl-common-jdk8</artifactId>
+      <version>1.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
