--- a/enterprise/backup/pom.xml
+++ b/enterprise/backup/pom.xml
@@ -55,6 +55,11 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-dbms</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cluster</artifactId>
       <version>${project.version}</version>
     </dependency>
