Moving bolt_advertised_address into the server module for use in discovery (requested by drivers team)

--- a/enterprise/core-edge/pom.xml
+++ b/enterprise/core-edge/pom.xml
@@ -58,6 +58,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.neo4j.app</groupId>
+        <artifactId>neo4j-server</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.neo4j</groupId>
         <artifactId>neo4j-consistency-check</artifactId>
         <version>${project.version}</version>
