fix wrong extension package path

--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -51,7 +51,7 @@ dbms.connector.http.enabled=true
 # org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
 # neo4j-examples under /examples/unmanaged, resulting in a final URL of
 # http://localhost:${default.http.port}/examples/unmanaged/helloworld/{nodeId}
-#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
+#dbms.unmanaged_extension_classes=com.neo4j.example.extension=/examples/unmanaged 
 
 #*****************************************************************
 # HTTP logging configuration
