--- a/community/browser/package.json
+++ b/community/browser/package.json
@@ -1,7 +1,9 @@
 {
   "name": "neo4j-browser",
   "version": "2.0.0-SNAPSHOT",
-  "dependencies": {},
+  "dependencies": {
+    "karma-phantomjs-launcher": "^1.0.0"
+  },
   "engines": {
     "node": ">=0.10.2"
   },
@@ -40,7 +42,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-ng-scenario": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-requirejs": "^0.2.2",
     "karma-sauce-launcher": "^0.2.11",
     "matchdep": "^0.3.0",
