--- a/community/bolt/pom.xml
+++ b/community/bolt/pom.xml
@@ -51,7 +51,7 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-security</artifactId>
+      <artifactId>neo4j-kernel</artifactId>
       <version>${project.version}</version>
     </dependency>
 
@@ -87,6 +87,12 @@
       <artifactId>neo4j-kernel</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-security</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
