Add missing defaults for HTTP log rotation to neo4j.conf

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -72,6 +72,12 @@ dbms.connector.https.address=localhost:#{default.https.port}
 # To enable HTTP logging, uncomment this line
 #dbms.logs.http.enabled=true
 
+# Number of HTTP logs to keep.
+#dbms.logs.http.rotation.keep_number=5
+
+# Size of each HTTP log that is kept.
+#dbms.logs.http.rotation.size=20m
+
 # To enable GC Logging, uncomment this line
 #dbms.logs.gc.enabled=true
 
