--- a/manual/bolt/pom.xml
+++ b/manual/bolt/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>neo4j-bolt</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!--Test dependencies-->
         <dependency>
