Add comment on neo4j.conf explaining how to expose HTTPS

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -53,13 +53,14 @@ dbms.connector.bolt.tls_level=OPTIONAL
 dbms.connector.http.type=HTTP
 dbms.connector.http.enabled=true
 #dbms.connector.http.encryption=NONE
-# To have HTTP accept non-local connections, uncomment this line
+# To accept non-local HTTP connections, uncomment this line
 #dbms.connector.http.address=0.0.0.0:#{default.http.port}
 
 # HTTPS Connector
 dbms.connector.https.type=HTTP
 dbms.connector.https.enabled=true
 dbms.connector.https.encryption=TLS
+# To accept non-local HTTPS connection, change 'localhost' to '0.0.0.0'
 dbms.connector.https.address=localhost:#{default.https.port}
 
 # Number of Neo4j worker threads.
